Add functions for supporting Alpaca Containers
Issue #3089 Regression: Cannot find path 'C:\Windows\SysWow64\NavSip.dll' because it does not exist.
Issue #3087 Enter-BCContainer on PowerShell 7 doesn't seem to work
Add parameters `PreCompileApp` and `PostCompileApp` to `Run-AlPipeline` to allow running custom scripts before and after compiling an app.

5.0.3
Issue #3051 Unable to import .rapidstart file - The property 'Code' cannot be found on this object
Issue #3054 BcContainerHelper doesn't work with Docker 24.0.0. Docker error "WARNING: Ignoring custom format, because both --format and --quiet are set
Issue #3055 Unnecessary administrator check when creating container that uses external database server

5.0.2
Issue #2934 Add setting to containerHelper config: DoNotUseCdnForArtifacts to allow people to grab Artfacts directly from blob storage instead of CDN
Issue #3047 Get-BCArtifactUrl -select Daily returns latest every time if a new major.minor is shipped
Issue #3048 Unable to import .rapidstart file - 'Get-PackageInfoFromRapidStartFile' is not recognized

5.0.1
Fix issue with New-AadAppsForBC, invalid return when not specifying useCurrentMicrosoftGraphConnection
Replace -IncludePowerBiAadApp and -IncludeEMailAadApp with -IncludeOtherServicesAadApp on New-AadAppsForBC (acc. https://learn.microsoft.com/en-us/dynamics365/business-central/dev-itpro/administration/register-app-azure)

5.0.0
Had to increase version number due to pre-release runnumber ran past 999
New functions Copy-ItemToBcContainer and Copy-ItemFromBcContainer to copy folders or files to or from a container
Allow ConvertTo-HashTable to also convert from OrderedDictionary or HashTable to a new HashTable recursively
Issue #2951 Users created from Setup-BcContainerTestUsers does not have any permission sets in version 22
New function Get-BcEnvironmentUpdateWindow, to retrieve the update window of a Business Central Online environment.